fix: left align li text

--- a/fullstack-cert/react-projects/search-app/styles.css
+++ b/fullstack-cert/react-projects/search-app/styles.css
@@ -67,6 +67,7 @@ input {
 }
 
 li {
+  text-align: left;
   margin: 10px 0;
 }
 
